@@ -1,4 +1,10 @@
 2007-10-06 Benny Malengier <benny.malengier@gramps-project.org> 
+	* src/DataViews/_RelationView.py: don't crash on missing media ref
+	* src/DisplayTabs/_GalleryTab.py: on missing media ref, notify to run check tool
+	* src/plugins/Check.py: add code to remove missing media ref in person,
+	family, event, place, source.
+
+2007-10-06 Benny Malengier <benny.malengier@gramps-project.org> 
 	* src/plugins/Check.py: add remove empty objects.
 
 2007-10-05  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
